Fixed spacing, navbutton position among other things.

--- a/code/src/components/button/button.css
+++ b/code/src/components/button/button.css
@@ -47,5 +47,30 @@ button {
 .submit-button {
   grid-column: 1;
   height: 60px;
+  margin: 1rem auto auto auto;
   width: 200px;
+}
+
+.survey-navigation {
+  margin-top: 1rem;
+  text-align: center;
+}
+
+@media screen and (min-width: 668px) {
+  .survey-navigation {
+    text-align: right;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .submit-button {
+    grid-row: 3;
+    margin: 1rem 0;
+  }
+
+  .survey-navigation {
+    align-self: center;
+    margin-top: 0;
+    grid-row: 4 / span 2;
+  }
 }
